fixed the mapping and refactored the code